Set attached flag before we call didAddScrollbar

This issue is caused by we call didAddScrollbar before set the attached flag.
That makes FrameView::horizontalScrollbar, FrameView::verticalScrollbar
always return null and ScrollableArea::setScrollbarOverlayColorTheme can not set
OverlayColorTheme to ScrollbarThemeMac.

In this patch we move the attached flag set before didAddScrollbar call.

BUG=688516

Review-Url: https://codereview.chromium.org/2671323004
Cr-Commit-Position: refs/heads/master@{#448814}

Former-commit-id: b45a817c9a86d2d25ed6fba359abceafc728c2d3